--- a/content/themes/casper/index.hbs
+++ b/content/themes/casper/index.hbs
@@ -103,7 +103,7 @@
                             <div class="hex-outer">
                                 <div class="hex-inner" style="background:url(/content/images/2015/03/nav-food.jpg) 50% 50% no-repeat;background-size:cover;">
                                     <div class="hex-text-wrap">
-                                        <div class="hex-text"><a class="black-link" href="/tag/cooking/">Cooking</a></div>
+                                        <div class="hex-text"><a class="black-link" href="/tag/food/">Food</a></div>
                                     </div>
                                 </div>
                             </div>
