--- a/content/themes/casper/index.hbs
+++ b/content/themes/casper/index.hbs
@@ -16,7 +16,7 @@
                     <div class="hex-container">
                         <div class="hex">
                             <div class="hex-outer">
-                                <div class="hex-inner" style="background:rgba(120,120,120,0.4);">
+                                <div class="hex-inner" style="background:url(/content/images/2015/04/dogcandle.jpg) 50% 50% no-repeat;background-size:cover;">
                                     {{!-- <div class="hex-text-wrap"> --}}
                                         {{!-- <div class="hex-text">Cooking</div> --}}
                                     {{!-- </div> --}}
@@ -27,10 +27,10 @@
                     <div class="hex-container">
                         <div class="hex">
                             <div class="hex-outer">
-                                <div class="hex-inner" style="background:rgba(120,120,120,0.4);">
-                                    {{!-- <div class="hex-text-wrap"> --}}
-                                        {{!-- <div class="hex-text">Cooking</div> --}}
-                                    {{!-- </div> --}}
+                                <div class="hex-inner" style="background:url(/content/images/2015/04/clipboards.jpg) 50% 50% no-repeat;background-size:cover;">
+                                    <div class="hex-text-wrap">
+                                        <div class="hex-text"><a class="black-link" href="/tag/design/">Design</a></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -38,10 +38,10 @@
                     <div class="hex-container">
                         <div class="hex">
                             <div class="hex-outer">
-                                <div class="hex-inner" style="background:rgba(120,120,120,0.4);">
-                                    {{!-- <div class="hex-text-wrap"> --}}
-                                        {{!-- <div class="hex-text">Cooking</div> --}}
-                                    {{!-- </div> --}}
+                                <div class="hex-inner" style="background:url(/content/images/2015/04/gbox.jpg) 55% 50% no-repeat;background-size:cover;">
+                                    <div class="hex-text-wrap">
+                                        <div class="hex-text"><a class="black-link" href="/tag/things/">Things</a></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -49,10 +49,10 @@
                     <div class="hex-container">
                         <div class="hex">
                             <div class="hex-outer">
-                                <div class="hex-inner" style="background:rgba(120,120,120,0.4);">
-                                    {{!-- <div class="hex-text-wrap"> --}}
-                                        {{!-- <div class="hex-text">Cooking</div> --}}
-                                    {{!-- </div> --}}
+                                <div class="hex-inner" style="background:url(/content/images/2015/04/studspaint.jpg) 50% 50% no-repeat;background-size:cover;">
+                                    <div class="hex-text-wrap">
+                                        <div class="hex-text"><a class="black-link" href="/tag/diy/">DIY</a></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -63,10 +63,10 @@
                     <div class="hex-container">
                         <div class="hex">
                             <div class="hex-outer">
-                                <div class="hex-inner" style="background:rgba(120,120,120,0.4);">
-                                    {{!-- <div class="hex-text-wrap"> --}}
-                                        {{!-- <div class="hex-text">Cooking</div> --}}
-                                    {{!-- </div> --}}
+                                <div class="hex-inner" style="background:url(/content/images/2015/04/tulips.jpg) 50% 50% no-repeat;background-size:cover;">
+                                    <div class="hex-text-wrap">
+                                        <div class="hex-text"><a class="black-link" href="/tag/fitness/">Fitness</a></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -114,7 +114,7 @@
                             <div class="hex-outer">
                                 <div class="hex-inner" style="background:url(/content/images/2015/03/nav-diy.jpg) 50% 50% no-repeat;background-size:cover;">
                                     <div class="hex-text-wrap">
-                                        <div class="hex-text"><a class="black-link" href="/tag/diy/">DIY</a></div>
+                                        <div class="hex-text"><a class="black-link" href="/tag/jewelry/">Jewelry</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -125,7 +125,7 @@
                     <div class="hex-container">
                         <div class="hex">
                             <div class="hex-outer">
-                                <div class="hex-inner" style="background:rgba(120,120,120,0.4);">
+                                <div class="hex-inner" style="background:url(/content/images/2015/04/tulips.jpg) 50% 50% no-repeat;background-size:cover;">
                                     {{!-- <div class="hex-text-wrap"> --}}
                                         {{!-- <div class="hex-text">Cooking</div> --}}
                                     {{!-- </div> --}}
@@ -183,7 +183,7 @@
                     <div class="hex-container">
                         <div class="hex">
                             <div class="hex-outer">
-                                <div class="hex-inner" style="background:rgba(120,120,120,0.4);">
+                                <div class="hex-inner"  style="background:url(/content/images/2015/04/sushiflower.jpg) 50% 50% no-repeat;background-size:cover;">
                                     {{!-- <div class="hex-text-wrap"> --}}
                                         {{!-- <div class="hex-text">Cooking</div> --}}
                                     {{!-- </div> --}}
@@ -194,7 +194,7 @@
                     <div class="hex-container">
                         <div class="hex">
                             <div class="hex-outer">
-                                <div class="hex-inner" style="background:rgba(120,120,120,0.4);">
+                                <div class="hex-inner"  style="background:url(/content/images/2015/04/shutupeggs.jpg) 50% 50% no-repeat;background-size:cover;">
                                     {{!-- <div class="hex-text-wrap"> --}}
                                         {{!-- <div class="hex-text">Cooking</div> --}}
                                     {{!-- </div> --}}
@@ -205,7 +205,7 @@
                     <div class="hex-container">
                         <div class="hex">
                             <div class="hex-outer">
-                                <div class="hex-inner" style="background:rgba(120,120,120,0.4);">
+                                <div class="hex-inner"  style="background:url(/content/images/2015/04/greendrink.jpg) 50% 50% no-repeat;background-size:cover;">
                                     {{!-- <div class="hex-text-wrap"> --}}
                                         {{!-- <div class="hex-text">Cooking</div> --}}
                                     {{!-- </div> --}}
@@ -216,7 +216,7 @@
                     <div class="hex-container">
                         <div class="hex">
                             <div class="hex-outer">
-                                <div class="hex-inner" style="background:rgba(120,120,120,0.4);">
+                                <div class="hex-inner"  style="background:url(/content/images/2015/04/tulips.jpg) 50% 50% no-repeat;background-size:cover;">
                                     {{!-- <div class="hex-text-wrap"> --}}
                                         {{!-- <div class="hex-text">Cooking</div> --}}
                                     {{!-- </div> --}}
@@ -226,41 +226,7 @@
                     </div>
                 </div>
 
-                <div class="hex-row hex-row-6">
-                    <div class="hex-container">
-                        <div class="hex">
-                            <div class="hex-outer">
-                                <div class="hex-inner" style="background:rgba(120,120,120,0.4);">
-                                    {{!-- <div class="hex-text-wrap"> --}}
-                                        {{!-- <div class="hex-text">Cooking</div> --}}
-                                    {{!-- </div> --}}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="hex-container">
-                        <div class="hex">
-                            <div class="hex-outer">
-                                <div class="hex-inner" style="background:rgba(120,120,120,0.4);">
-                                    {{!-- <div class="hex-text-wrap"> --}}
-                                        {{!-- <div class="hex-text">Cooking</div> --}}
-                                    {{!-- </div> --}}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="hex-container">
-                        <div class="hex">
-                            <div class="hex-outer">
-                                <div class="hex-inner" style="background:rgba(120,120,120,0.4);">
-                                    {{!-- <div class="hex-text-wrap"> --}}
-                                        {{!-- <div class="hex-text">Cooking</div> --}}
-                                    {{!-- </div> --}}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
 
             </div>
         {{/if}}
