--- a/content/themes/casper/index.hbs
+++ b/content/themes/casper/index.hbs
@@ -125,7 +125,7 @@
                     <div class="hex-container">
                         <div class="hex">
                             <div class="hex-outer">
-                                <div class="hex-inner" style="background:url(/content/images/2015/04/tulips.jpg) 50% 50% no-repeat;background-size:cover;">
+                                <div class="hex-inner" style="visibility:hidden">
                                     {{!-- <div class="hex-text-wrap"> --}}
                                         {{!-- <div class="hex-text">Cooking</div> --}}
                                     {{!-- </div> --}}
